[java-11] Updated code to comply with Java 9 and Java 10 innovations Updated POM file to compile in Java 11