@@ -14,24 +14,21 @@ final class CollectionsUtils {
     private CollectionsUtils(){}
 
     static List<String> generateUnmodifiableListOfStrings() {
-        // TODO Use Java 10 new stuffs
-        final List<String> strings = randomizer.objects(String.class, 10).collect(Collectors.toList());
-
-        return Collections.unmodifiableList(strings);
+        // You can also use this kind of thing
+        // List.of("One", "Two", "Three")
+        return randomizer.objects(String.class, 10).collect(Collectors.toUnmodifiableList());
     }
 
     static Set<String> generateUnmodifiableSetOfStrings() {
-        // TODO Use Java 10 new stuffs
-        Set<String> strings = randomizer.objects(String.class, 10).collect(Collectors.toSet());
-
-        return Collections.unmodifiableSet(strings);
+        // You can also use this kind of thing
+        // Set.of("One", "Two", "Three")
+        return randomizer.objects(String.class, 10).collect(Collectors.toUnmodifiableSet());
     }
 
     static Map<String, String> generateUnmodifiableMapOfStrings() {
-        // TODO Use Java 10 new stuffs
-        Map<String, String> stringMap = randomizer.objects(String.class, 10)
-                .collect(Collectors.toMap(Function.identity(), Function.identity()));
-
-        return Collections.unmodifiableMap(stringMap);
+        // You can also use this kind of thing
+        // Map.of("One", "1", "Two", "2", "Three", "3");
+        return randomizer.objects(String.class, 10)
+                .collect(Collectors.toUnmodifiableMap(Function.identity(), Function.identity()));
     }
 }
